@startuml
skin rose
skinparam backgroundColor #EEEBDC
left to right direction
skinparam linetype ortho

class User {
    - Id
    + NotifyOnExpiration
    + NotifyOnDeadline
    + NotifyOnThreshold
    + NotifyOnInsufficientResources

    + Register()
    + Login()
    + Logout()
    + ChangePassword()

    + toggleNotifyOnExpiration()
    + toggleNotifyOnDeadline()
    + toggleNotifyOnThreshold()
    + toggleNotifyOnInsufficientResources()
}

class Tag {
    - Id
    + Name
    + Color

    + UpdateName(NewName)
    + UpdateColor(NewColor)
}

class Catalog {
    - Id
    + ItemTypes

    + AddItemType(ItemType)
    + RemoveItemType(ItemType)
    + QueryItemType(Query)
}

class ItemType {
    - Id
    + Name
    + Description
    + BaseMeasurementUnit
    + DefaultDisplayMeasurementUnit
    + DefaultQuantity
    + ShortageTrashold
    + PictureName
    + PictureSource
    + Tags

    + UpdateName(NewName)
    + UpdateDescription(NewDescription)
    + UpdateBaseMeasurementUnit(NewUnit)
    + UpdateDefaultDisplayMeasurementUnit(NewUnit)
    + UpdateDefaultQuantity(NewQuantity)
    + UpdateShortageTrashold(NewTrashold)
    + UpdatePicture(NewPicture)
    + AddTag(Tag)
    + RemoveTag(Tag)
}

class Inventory {
    - Id
    + Items

    + AddItem(Item)
    + RemoveItem(Item)
    + QueryItem(Query)
}

class Item {
    - Id
    + ItemType
    + Description
    + Quantity
    + ExpirationDate
    + DisplayMeasurementUnit
    + PurchasePrice
    + Tags

    + UpdateDescription(NewDescription)
    + UpdateQuantity(NewQuantity)
    + UpdateExpirationDate(NewDate)
    + UpdateDisplayMeasurementUnit(NewUnit)
    + UpdatePurchasePrice(PurchasePrice)
    + AddTag(Tag)
    + RemoveTag(Tag)
}

User *-l- Catalog
User *-r- Inventory

Catalog *-- ItemType
Inventory *-- Item

ItemType -r- Tag
Item -l- Tag

Item -l-* ItemType

@enduml
